# vault-local

./: .gitignore  BINANCE_PAY_RESEARCH.md  CODE_OF_CONDUCT.md  COMUNIDADES_PROMOCION.md  CONTRIBUTING.md  DEVTO_ARTICLE.md  DEVTO_ARTICLE_2.md  LICENSE  README.md  SECURITY.md  SETUP.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
extension/: FIREFOX_AMO_SUBMISSION.md  STORE_LISTING.md  STORE_SCREENSHOTS.md  manifest.firefox.json  manifest.json  ziapyjav
extension/background/: service-worker.js
extension/content/: autofill.js
extension/native-host/: com.vaultlocal.app.firefox.json  com.vaultlocal.app.json  host.js  install.ps1
extension/popup/: popup.css  popup.html  popup.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipc_server.rs  lib.rs  lockout.rs  main.rs  security.rs  state.rs
src-tauri/src/commands/: attachments.rs  audit.rs  auth.rs  backup.rs  clipboard.rs  import_export.rs  license.rs  mod.rs  ssh_agent.rs  sync.rs  totp.rs  vault.rs
src-tauri/src/crypto/: cipher.rs  kdf.rs  mod.rs  password_gen.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs
src/components/: AuditPanel.tsx  BackupSettings.tsx  CategoryFilter.tsx  ChangePasswordDialog.tsx  Dashboard.tsx  EntryDetail.tsx  EntryForm.tsx  EntryList.tsx  ImportExportDialog.tsx  LicenseDialog.tsx  LockScreen.tsx  Onboarding.tsx  (+7 more)
website/: _downloads-section.draft.html  de.html  en.html  index.html  privacy-en.html  privacy.html  pt.html
(+16 files in other folders)
