[package]
name = "vault-local"
version = "0.1.0"
edition = "2021"

[lib]
name = "vault_local_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
arboard = "3"
csv = "1.3"
base64 = "0.22"
sha1 = "0.10"
hmac = "0.12"
reqwest = { version = "0.12", features = ["blocking"] }
tauri-plugin-dialog = "2"
